@@ -1,3 +1,8 @@
+2019-11-05  Martin Liska  <mliska@suse.cz>
+
+	* c-c++-common/ubsan/ptr-overflow-2.c: Update based on changed
+	run-time reporting format.
+
 2019-11-05  Andreas Krebbel  <krebbel@linux.ibm.com>
 
 	* gcc.dg/tree-ssa/gen-vect-26.c: Disable loop peeling check for
